--- a/Stadtapp/AndroidManifest.xml
+++ b/Stadtapp/AndroidManifest.xml
@@ -1,6 +1,6 @@
 <?xml version="1.0" encoding="utf-8"?>
 <manifest xmlns:android="http://schemas.android.com/apk/res/android"
-    package="com.example.stadtrundgang"
+    package="com.example.stadtapp"
     android:versionCode="1"
     android:versionName="1.0" >
 
@@ -32,7 +32,7 @@
         android:icon="@drawable/ic_launcher"
         android:label="@string/app_name"
         android:theme="@style/AppTheme" >
-                <activity
+             <!--     <activity
             android:name=".StartActivity"
             android:label="@string/app_name" >
             <intent-filter>
@@ -40,7 +40,7 @@
 
                 <category android:name="android.intent.category.LAUNCHER" />
             </intent-filter>
-        </activity>
+        </activity> -->
         <activity
             android:name=".MainActivity"
             android:label="@string/app_name" >
