--- a/Stadtapp/.classpath
+++ b/Stadtapp/.classpath
@@ -5,13 +5,10 @@
 	<classpathentry kind="con" path="com.android.ide.eclipse.adt.ANDROID_FRAMEWORK"/>
 	<classpathentry exported="true" kind="con" path="com.android.ide.eclipse.adt.LIBRARIES"/>
 	<classpathentry exported="true" kind="con" path="com.android.ide.eclipse.adt.DEPENDENCIES"/>
-	<classpathentry kind="lib" path="libs/commons-io-2.4.jar"/>
-	<classpathentry kind="lib" path="libs/commons-io-2.4-tests.jar"/>
-	<classpathentry kind="lib" path="libs/commons-io-2.4-test-sources.jar"/>
-	<classpathentry kind="lib" path="libs/commons-io-2.4-sources.jar"/>
-	<classpathentry kind="lib" path="libs/commons-io-2.4-javadoc.jar"/>
-	<classpathentry kind="lib" path="libs/commons-fileupload-1.3.1.jar"/>
-	<classpathentry kind="lib" path="libs/commons-codec-1.7.jar"/>
-	<classpathentry kind="lib" path="libs/httpclient-4.0.jar"/>
+	<classpathentry kind="lib" path="libs/commons-codec-1.4.jar"/>
+	<classpathentry kind="lib" path="libs/httpmime-4.1.1.jar"/>
+	<classpathentry kind="lib" path="libs/commons-logging-1.1.1.jar"/>
+	<classpathentry kind="lib" path="libs/httpclient-4.1.1.jar"/>
+	<classpathentry kind="lib" path="libs/httpcore-4.1.jar"/>
 	<classpathentry kind="output" path="bin/classes"/>
 </classpath>
