--- a/Stadtapp/AndroidManifest.xml
+++ b/Stadtapp/AndroidManifest.xml
@@ -14,7 +14,7 @@
 <uses-feature android:glEsVersion="0x00020000" android:required="true"/>
 <uses-feature android:name="android.hardware.camera.front" android:required="false" />
 
-
+<uses-permission android:name="com.google.android.providers.gsf.permission.READ_GSERVICES" />
 <uses-permission android:name="android.permission.CAMERA" />
 <uses-permission android:name="android.permission.INTERNET"/>
 <uses-permission android:name="android.permission.ACCESS_NETWORK_STATE"/>
@@ -23,11 +23,18 @@
      Google Maps Android API v2, but are recommended. -->
 <uses-permission android:name="android.permission.ACCESS_COARSE_LOCATION"/>
 <uses-permission android:name="android.permission.ACCESS_FINE_LOCATION"/>
-    
+<!-- Creating Permission to receive Google Maps -->
+<permission
+    android:name="com.arshad.map.permission.MAPS_RECEIVE"
+    android:protectionLevel="signature" />
+
+<!-- Permission to receive Google Maps -->
+<uses-permission android:name="com.arshad.map.permission.MAPS_RECEIVE" />    
 
     
 
-    <application
+    <application 
+		android:screenOrientation="landscape"
         android:allowBackup="true"
         android:icon="@drawable/ic_launcher"
         android:label="@string/app_name"
@@ -66,7 +73,11 @@
         </activity>
         <meta-data
     android:name="com.google.android.maps.v2.API_KEY"
-    android:value="AIzaSyBRFe6sm6BfQx8s2py7X19W8acxsTxV41Q"/>
+    android:value="AIzaSyCrqH4hFiGEZdLLeU29v5p1JF66BCvi1HM"/>
+            
+    <meta-data android:name="com.google.android.gms.version"
+android:value="@integer/google_play_services_version" />
     </application>
+
 
 </manifest>
