--- a/Stadtapp/AndroidManifest.xml
+++ b/Stadtapp/AndroidManifest.xml
@@ -34,7 +34,6 @@
     
 
     <application 
-		android:screenOrientation="landscape"
         android:allowBackup="true"
         android:icon="@drawable/ic_launcher"
         android:label="@string/app_name"
@@ -49,27 +48,23 @@
             </intent-filter>
         </activity> -->
         <activity
+            android:screenOrientation="portrait"
             android:name=".MainActivity"
             android:label="@string/app_name" >
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
-
                 <category android:name="android.intent.category.LAUNCHER" />
             </intent-filter>
         </activity>
        <meta-data android:name="com.google.android.gms.version"
         android:value="@integer/google_play_services_version" />
         <activity 
-            android:name=".GoogleMapsActivity">
-            
+            android:name=".GoogleMapsActivity"
+            android:screenOrientation="portrait">
         </activity>
                 <activity 
-            android:name=".MyLocationDemoActivity">
-            
-        </activity>
-                <activity 
-            android:name=".EventsDemoActivity">
-            
+            android:name=".MyLocationDemoActivity"
+            android:screenOrientation="portrait">
         </activity>
         <meta-data
     android:name="com.google.android.maps.v2.API_KEY"
