--- a/Stadtapp/AndroidManifest.xml
+++ b/Stadtapp/AndroidManifest.xml
@@ -38,15 +38,14 @@
         android:icon="@drawable/ic_launcher"
         android:label="@string/app_name"
         android:theme="@style/AppTheme" >
-             <!--     <activity
+        <activity
             android:name=".StartActivity"
             android:label="@string/app_name" >
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
-
                 <category android:name="android.intent.category.LAUNCHER" />
             </intent-filter>
-        </activity> -->
+        </activity>
         <activity
             android:screenOrientation="portrait"
             android:name=".MainActivity"
